[package]
name = "cargo-shim"
version = "0.1.2"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/cargo-shim"
homepage = "https://github.com/koute/cargo-shim"
documentation = "https://docs.rs/cargo-shim/*/cargo-shim/"
license = "MIT/Apache-2.0"
description = "A helper library for interacting with Cargo"

[dependencies]
regex = "0.2"
cargo_metadata = "0.1"
