[package]
name = "cargo-shim"
version = "0.2.0"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/cargo-shim"
homepage = "https://github.com/koute/cargo-shim"
documentation = "https://docs.rs/cargo-shim/*/cargo-shim/"
license = "MIT/Apache-2.0"
description = "A helper library for interacting with Cargo"

[dependencies]
cargo_metadata = "0.6"
failure = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
ansi_term = "0.11"
